feat: 초기 세팅 완료

--- a/apps/demo/src/pages/HelloWorld/HelloWorld.module.scss
+++ b/apps/demo/src/pages/HelloWorld/HelloWorld.module.scss
@@ -19,6 +19,12 @@
     color: $white;
   }
 
+  .description {
+    color: $white;
+    font-size: ptr(20);
+    text-align: center;
+  }
+
   .logo {
     width: ptr(40);
     height: ptr(40);
